# kelson

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
kelson/: main.py
kelson/commands/: make.py  new.py  train.py
kelson/core/: config.py  container.py  model.py  scaffold.py
kelson/stubs/: model.stub
